add registration e2e test

--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -1,4 +1,4 @@
-<div class="row top-margin">
+<div id="ldlist" class="row top-margin">
 
   <!-- FIXME: inside of box is not responsive, try to use grid inside to layout the 5 elements -->
   <!-- LD BOX START -->
