--- a/client/views/index.html
+++ b/client/views/index.html
@@ -22,7 +22,7 @@
 <body ng-controller="AppCtrl">
 
   <!-- Begin Nav Bar Anon View -->
-  <div data-access-level='{{ accessLevels.anon }}' ng-controller="LoginCtrl" class="navbar navbar-inverse navbar-fixed-top">
+  <div id="navBarAnon" data-access-level='{{ accessLevels.anon }}' ng-controller="LoginCtrl" class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
         <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -43,7 +43,7 @@
   </div><!-- End Nav Bar Anon View -->
 
   <!-- Begin Nav Bar User View -->
-  <div data-access-level='{{ accessLevels.user }}' class="navbar navbar-inverse navbar-fixed-top">
+  <div id="navBarUser" data-access-level='{{ accessLevels.user }}' class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
         <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -60,7 +60,7 @@
         </ul>
         <div class="pull-right">
           <ul class="nav pull-right">
-            <li class="nav-username">{{ user.username }}</li>
+            <li id="loggedInUserName" class="nav-username">{{ user.username }}</li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <img src="img/avatar_sample.png" alt="User Avatar" class="img-rounded"/>
