--- a/client/views/index.html
+++ b/client/views/index.html
@@ -35,7 +35,7 @@
           <form ng-submit="login()" class="navbar-form pull-right">
             <input ng-model="username" class="span2" type="email" placeholder="Email" required="">
             <input ng-model="password" class="span2" type="password" placeholder="Password" required="">
-            <button type="submit" class="btn">Login</button>
+            <button id="loginButton" type="submit" class="btn">Login</button>
           </form>
         </div><!--/.nav-collapse -->
       </div>
