js files organization

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -88,12 +88,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-cookies.js"></script>
 
 <!-- Client MVC -->
-<script src="/js/routingConfig.js"></script>
+<script src="/js/auth/AuthRoutingConfig.js"></script>
 <script src="/js/app.js"></script>
-<script src="/js/services.js"></script>
-<script src="/js/controllers.js"></script>
-<script src="/js/filters.js"></script>
-<script src="/js/directives.js"></script>
+<script src="/js/auth/AuthService.js"></script>
+<script src="/js/auth/AuthController.js"></script>
+<script src="/js/auth/AuthFilter.js"></script>
+<script src="/js/auth/AuthDirective.js"></script>
 
 <!-- Bootstrap: in theory could use angular-ui instead, but in practice, it has some problems, alerts for example are better handled in regular bootstrap -->
 <script src="/js/lib/jquery.js"></script>
