add ng-cloak to body to prevent ui from flashing before angular has loaded

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body ng-controller="AppCtrl">
+<body ng-cloak ng-controller="AppCtrl">
 
   <!-- Begin Nav Bar Anon View -->
   <div id="navBarAnon" data-access-level='{{ accessLevels.anon }}' ng-controller="LoginCtrl" class="navbar navbar-inverse navbar-fixed-top">
