--- a/client/css/app.css
+++ b/client/css/app.css
@@ -1,18 +1,15 @@
 /* Customize Bootstrap  Start */
 body {
 	background-color: rgb(245, 244, 237);
+    font-family: Verdana, Geneva, sans-serif;
+    color: #666666;
 }
 
 .navbar-inverse .navbar-inner {
-	background-color: #339E2A;
-	background-image: -moz-linear-gradient(top, #339E2A, #22A547);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#339E2A), to(#22A547));
-	background-image: -webkit-linear-gradient(top, #339E2A, #22A547);
-	background-image: -o-linear-gradient(top, #339E2A, #22A547);
-	background-image: linear-gradient(to bottom, #339E2A, #22A547);
+    background-image: url('../img/header.jpg');
 	background-repeat: repeat-x;
-	border-color: #252525;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#339E2A', endColorstr='#22A547', GradientType=0);
+    border: none;
+
 }
 
 /* top right bottom left */
@@ -31,7 +28,11 @@ body {
 
 .nav-username {
 	margin-top: 22px;
-	font-size: 20px;
+	font-size: 18px;
+    color: #FFFFFF;
+    text-shadow: 0 -1px 1px rgba(255, 255, 255, 0.75);
+    text-shadow: 0 -1px 1px rgba(155, 155, 155, 0.75);
+
 }
 
 .navbar-inverse .nav li.dropdown > .dropdown-toggle .caret {
@@ -40,15 +41,30 @@ body {
 }
 
 .input-xlarge {
-	width: 250px;
+	width: 350px;
 }
 
 legend {
-	font-size: 32px;
+	font-size: 24px;
+}
+
+.whiteText, .whiteText a{
+    color: #FFFFFF;
+}
+
+.whiteText a {
+    text-decoration: underline;
+}
+
+input[type="checkbox"] {
+    margin: 0;
+    border-radius: 6px;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
 }
 
 .form-horizontal .controls {
-	margin-left: 100px;
+	margin-left: 60px;
 }
 
 .ld-border hr {
@@ -61,21 +77,44 @@ legend {
 	margin-top: 50px;
 }
 
-.login-border {	
-	border-radius: 6px; 
-	-moz-border-radius: 6px; 
-	-webkit-border-radius: 6px; 
-	border: 2px solid #292727;
+.login-border  {
+	background: url("../img/signup.png") no-repeat;
 	margin-top: 40px;
-	padding-left: 15px;
+    width: 500px;
 }
 
+#loginError {
+    margin: 0 15px 0 0;
+    border: 1px solid #cccccc;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    border-bottom-color: #777777;
+    vertical-align: middle;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+#loginButton {
+    background-color: #0099CC;
+    background-image: none;
+    color: #FFFFFF;
+    font-weight: bold;
+    text-shadow: 0 1px 1px rgba(155, 155, 155, 0.65);
+}
 #signUpHeader {
 	padding-top: 20px;
+    color: #FFFFFF;
+    font-weight: bold;
+    font-family: verdana, geneva, sans-serif;
+    font-size: 24px;
+    text-shadow: 0 2px 1px rgba(255, 255, 255, 0.75);
+    text-shadow: 0 -2px 1px rgba(155, 155, 155, 0.75);
+    border: none;
+    text-align: center;
+    padding-top: 30px;
 }
 
 #registrationErrors {
-	margin-right: 20px;
+	width: 70%;
+    margin: 0 50px 15px 50px;
 }
 
 .ld-grid {
@@ -112,27 +151,41 @@ legend {
 }
 
 .btn-signup {
-	color: #F7F7F7;
+	color: #0099cc;
+    font-weight: bold;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-	background-color: #D99607;
-	*background-color: #D99607;
-	background-image: -moz-linear-gradient(top, #F77700, #D99607);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#F77700), to(#D99607));
-	background-image: -webkit-linear-gradient(top, #F77700, #D99607);
-	background-image: -o-linear-gradient(top, #F77700, #D99607);
-	background-image: linear-gradient(to bottom, #F77700, #D99607);
-	background-repeat: repeat-x;
-	border-color: #D99607;
-	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#F77700', endColorstr='#D99607', GradientType=0);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+	background-color: #FFFFFF;
+    text-shadow: 0 -2px 1px rgba(255, 255, 255, 0.75);
+    text-shadow: 0 1px 1px rgba(155, 155, 155, 0.75);
+    margin: -30px 0 0 0;
 }
 .btn-signup:hover,
 .btn-signup:active,
 .btn-signup.active,
 .btn-signup.disabled,
 .btn-signup[disabled] {
-	color: #FFFFFF;
-	background-color: #D99607;
-	*background-color: #003bb3;
+	color: #CC0000;
+}
+
+
+.form-actions {
+    border: none;
+    background-image: url("../img/signup.png");
+    background-position: bottom;
+    margin: 0;
+    padding: 20px 0 40px 0;
+}
+
+.centered {
+    text-align: center;
+}
+
+h1.homeHeader {
+    font-family: 'Kite One', sans-serif;
+    color: ;
+    font-size: 28px;
+    text-align: center;
+    text-shadow: 0 -2px 1px rgba(255, 255, 255, 0.75);
+    text-shadow: 0 1px 1px rgba(155, 155, 155, 0.75);
+
 }
