--- a/client/views/index.html
+++ b/client/views/index.html
@@ -99,6 +99,8 @@
 <script src="/js/auth/AuthController.js"></script>
 <script src="/js/auth/AuthFilter.js"></script>
 <script src="/js/auth/AuthDirective.js"></script>
+<script src="/js/ld/HomeController.js"></script>
+<script src="/js/ld/HomeService.js"></script>
 
 <!-- Bootstrap: in theory could use angular-ui instead, but in practice, it has some problems, alerts for example are better handled in regular bootstrap -->
 <script src="/js/lib/jquery.js"></script>
