e2e test to verify lds from database, update readme for database dependency in tests

--- a/client/views/partials/home.html
+++ b/client/views/partials/home.html
@@ -1,7 +1,7 @@
 <div id="ldlist" class="row top-margin">
 
   <!-- LD BOX START -->
-  <div ng-repeat="learningDesign in learningDesigns" class="span3 ld-border">
+  <div ng-repeat="learningDesign in learningDesigns" class="span3 ld-border ld-item">
     <div class="ld-top-left">
       A1
     </div>
