--- a/client/css/app.css
+++ b/client/css/app.css
@@ -1,50 +1,39 @@
-/* Customize Bootstrap  Start */
+/* ==================
+ LEDITA Style Sheet
+=====================
+Swatch colors:
+0099CC = light blue
+FF0000 = red
+F5F4ED = light grey
+666666 = grey
+ACE500 = green
+=================== */
+
+/* resets and overrides
+===================== */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    border: none;
+}
+
+/* body & type
+===================== */
 body {
-	background-color: rgb(245, 244, 237);
-    font-family: Verdana, Geneva, sans-serif;
+    padding: 60px 0 40px;
+    background-color: #F5F4ED;
+    font: 14px 'Raleway', sans-serif;
+    line-height: 22px;
     color: #666666;
 }
 
-.navbar-inverse .navbar-inner {
-    background-image: url('../img/header.jpg');
-	background-repeat: repeat-x;
-    border: none;
+h1, h2, h3, h4 {
+    font-family: 'Cabin Sketch', cursive;
 
-}
-
-/* top right bottom left */
-.navbar .nav-top-pad {
-	margin: 15px 0 0 0;
-}
-
-.navbar .nav > li {
-	margin-right: 5px;
-	margin-left: 5px;
-}
-
-.navbar-form {
-	margin-top: 15px;
-}
-
-.nav-username {
-	margin-top: 22px;
-	font-size: 18px;
-    color: #FFFFFF;
-    text-shadow: 0 -1px 1px rgba(255, 255, 255, 0.75);
-
-}
-
-.navbar-inverse .nav li.dropdown > .dropdown-toggle .caret {
-	border-top-color: #333333;
-	border-bottom-color: #333333;
-}
-
-.input-xlarge {
-	width: 350px;
-}
-
-legend {
-	font-size: 24px;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75), 0 -1px 1px rgba(155, 155, 155, 0.75);
 }
 
 .whiteText, .whiteText a{
@@ -55,6 +44,164 @@ legend {
     text-decoration: underline;
 }
 
+.homeHeader {
+    text-shadow: 0 -2px 2px #FFFFFF, 0 2px 2px #CCCCCC;
+    text-align: center;
+    font-family: Allan, sans-serif;
+    font-style: italic ;
+    font-size: 32px;
+
+}
+
+.centered {
+    text-align: center;
+}
+
+/* main layout
+===================== */
+
+/* navbar
+===================== */
+.navbar-inverse .navbar-inner {
+    background: url('../img/header.jpg') repeat-x;
+    border: none;
+}
+
+.navbar .nav-top-pad {
+    margin: 15px 0 0 0;
+}
+
+.navbar .nav > li {
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.navbar-form {
+    margin-top: 10px;
+}
+
+.navbar-inverse .nav li.dropdown > .dropdown-toggle .caret {
+    border-top-color: #333333;
+    border-bottom-color: #333333;
+}
+
+.nav-username {
+    margin-top: 22px;
+    font-size: 18px;
+    color: #FFFFFF;
+    text-shadow: 0 -1px 1px rgba(255, 255, 255, 0.75);
+}
+
+/* login form
+===================== */
+
+#loginError {
+    color: #FFFFFF;
+    font-weight: bold;
+    background-color: #FF0000;
+    text-shadow: 0 1px 1px rgba(155, 155, 155, 0.65);
+
+    margin: 10px;
+}
+
+#loginButton {
+    background: #0099CC none;
+    color: #FFFFFF;
+    font-weight: bold;
+    text-shadow: 0 1px 1px rgba(155, 155, 155, 0.65);
+}
+
+#pwRec a {
+    text-align: right;
+    padding-right: 75px;
+    display: block;
+    font-size: 12px ;
+    font-weight: bold;
+    color: #FFFFFF;
+    text-shadow: 0 1px 1px rgba(155, 155, 155, 0.65), 0 -1px 1px rgba(155, 155, 155, 0.75) ;
+}
+
+#pwRec a:hover {
+    color: #0099CC;
+    text-decoration: none;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 1), 0 -1px 1px rgba(255, 255, 255, 0.65);
+}
+
+#loggedInUserName {
+    font-weight: bold;
+}
+
+/* registration form
+===================== */
+.form-horizontal {
+    background-image: url("../img/signup.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: center;
+    margin: 30px 0 0 0;
+}
+
+.login-border  {
+}
+
+#signUpHeader {
+    color: #FFFFFF;
+    font-weight: bold;
+    font-size: 28px;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75), 0 -2px 1px rgba(155, 155, 155, 0.75);
+    border: none;
+    text-align: center;
+    padding-top: 30px;
+    margin: 0 auto;
+}
+.btn-signup {
+    color: #0099cc;
+    font-weight: bold;
+    background-color: #FFFFFF;
+    text-shadow: 0 -1px 1px rgba(255, 255, 255, 0.75), 0 1px 1px rgba(155, 155, 155, 0.75);
+    margin: -30px auto 0 auto;
+}
+.btn-signup:hover,
+.btn-signup:active,
+.btn-signup.active,
+.btn-signup.disabled,
+.btn-signup[disabled] {
+    color: #FF0000;
+}
+
+.form-horizontal .form-actions {
+    padding-left: 0;
+}
+
+.form-actions {
+    border: none;
+    margin: 0;
+    padding: 20px 0 40px 0;
+    text-align: center;
+}
+
+.control-group {
+    margin: 0 0 0 -128px;
+    padding: 0;
+    width: 100%;
+}
+
+.controls {
+    margin: -20px 0 0 0;
+    padding: 0;
+    width: 100%;
+}
+
+/* form elements
+===================== */
+.input-xlarge {
+    width: 80%;
+}
+
+legend {
+    font-size: 24px;
+}
+
 input[type="checkbox"] {
     margin: 0;
     border-radius: 6px;
@@ -62,144 +209,228 @@ input[type="checkbox"] {
     -webkit-border-radius: 6px;
 }
 
-.form-horizontal .controls {
-	margin-left: 60px;
-}
-
-.ld-border hr {
-	margin: 0 0 0 0;
-	border-top: 1px solid #333333;
-}
-/* Customize Bootstrap  End */
-
-.top-margin {
-	margin-top: 50px;
-}
-
-.login-border  {
-	background: url("../img/signup.png") no-repeat;
-	margin-top: 40px;
-    width: 500px;
-}
-
-#loginError {
-    margin: 0 15px 0 0;
-    border: 1px solid #cccccc;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    border-bottom-color: #777777;
-    vertical-align: middle;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-}
-
-#loginButton {
-    background-color: #0099CC;
-    background-image: none;
+.errorTip {
+    font: bold 11px helvetica, arial, sans-serif;
     color: #FFFFFF;
-    font-weight: bold;
-    text-shadow: 0 1px 1px rgba(155, 155, 155, 0.65);
+    border: 1px solid #FFFFFF;
+    background-color: #FF0000;
+    padding: 3px;
 }
-#signUpHeader {
- color: #FFFFFF;
-    font-weight: bold;
-    font-family: verdana, geneva, sans-serif;
-    font-size: 24px;
-    text-shadow: 0 2px 1px rgba(255, 255, 255, 0.75);
-    text-shadow: 0 -2px 1px rgba(155, 155, 155, 0.75);
-    border: none;
-    text-align: center;
-    padding-top: 30px;
+/* misc
+===================== */
+.top-margin {
+    margin-top: 20px;
 }
 
-#registrationErrors {
-	width: 70%;
-    margin: 0 50px 15px 50px;
+.float-right {
+    float: right;
 }
+
+.clear {
+    clear: both;
+}
+
+/* LDs view
+===================== */
 
 .ld-grid {
-	margin-left: 0;
+    margin-left: 0;
 }
 
 .ld-border {
-	border-radius: 6px; 
-	-moz-border-radius: 6px; 
-	-webkit-border-radius: 6px; 
-	border: 2px solid #292727;
-	padding: 5px 10px 5px 10px;
-	margin-bottom: 10px;
-	background-color: #FAE46F;
-	max-width: 220px;
-}
-
-.ld-top-left {
-	position: relative;
-}
-
-.ld-top-right {
-	position: relative;
-	top: -20px;
-}
-
-.ld-bottom-left {
-	position: relative;
-	bottom: -20px;
-}
-
-.ld-bottom-right {
-	position: relative;
-}
-
-.btn-signup {
-	color: #0099cc;
-    font-weight: bold;
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-	background-color: #FFFFFF;
-    text-shadow: 0 -2px 1px rgba(255, 255, 255, 0.75);
-    text-shadow: 0 1px 1px rgba(155, 155, 155, 0.75);
-    margin: -30px 0 0 0;
-}
-.btn-signup:hover,
-.btn-signup:active,
-.btn-signup.active,
-.btn-signup.disabled,
-.btn-signup[disabled] {
-	color: #CC0000;
-}
-
-
-.form-actions {
-    border: none;
-    background-image: url("../img/signup.png");
-    background-position: bottom;
-    margin: 0;
-    padding: 20px 0 40px 0;
-}
-
-.centered {
-    text-align: center;
-}
-
-h1.homeHeader {
-    font-family: 'Kite One', sans-serif;
-    font-size: 28px;
-    text-align: center;
-    text-shadow: 0 -2px 1px rgba(255, 255, 255, 0.75);
-    text-shadow: 0 1px 1px rgba(155, 155, 155, 0.75);
-
-}
-
-.errorTip {
-    font-size: 11px;
+    border-radius: 6px;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border: 2px solid #FFFFFF;
+    padding: 5px 10px 5px 10px;
+    margin: 0 1% 20px auto;
+    background-color: #0099CC;
+    width: 22%;
+    min-width: 200px;
+    float: left;
     color: #FFFFFF;
-    border-radius: 3px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border: 1px solid #CC0000;
-    background-color: #CC0000;
-    padding: 2px;
+    height: 140px;
+}
+.ld-top {
+    height: 25px;
+    border-bottom: 1px solid #FFFFFF;
 }
 
-.controls {
-    margin-top: -20px;
-    padding-top: 0;
+.ld-center {
+    height: 80px;
 }
+
+.ld-bottom {
+}
+
+
+.ld-name-text {
+    font-size: 22px;
+    line-height: 26px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 90%;
+}
+
+.ld-name-text a {
+    color: #FFFFFF;
+}
+
+.ld-name-text a:hover {
+    text-decoration: none;
+    text-shadow: 0 -2px 2px #666666, 0 2px 2px #F5F4ED;
+
+}
+
+/* Responsive Rules
+================ */
+
+@media (min-width: 700px) and (max-width: 1200px) {
+    .control-group {
+        margin: 0 0 0 -140px;
+    }
+
+    .ld-border {
+        width: 20%;
+    }
+
+    .ld-name-text {
+        font-size: 20px;
+        line-height: 24px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 90%;
+    }
+}
+
+@media (max-width: 979px) {
+    body {
+        padding: 0;
+        margin: 0;
+    }
+    .ld-border {
+        width: 28%;
+        margin-left: 1%;
+    }
+    .navbar .brand {
+        margin: 0;
+        padding: 5px 5px 5px 30px;
+    }
+
+    .navbar-inverse .btn-navbar:hover {
+        background-color: #0099CC;
+    }
+
+    .navbar-inverse .btn-navbar{
+        background-color: #0099CC;
+        background-image: none;
+        margin: 10px 30px;
+    }
+
+    .navbar-inverse .nav-collapse .navbar-form {
+        border-color: #FFFFFF;
+        background-color: #0099CC;
+        margin: 0;
+    }
+
+    input[class*="span"] {
+        width: 90%;
+        margin: 10px auto;
+    }
+
+    #loginButton {
+        background-color: #FFFFFF;
+        color: #0099CC;
+        margin: 0 0 0 75%;
+    }
+
+    #loginButton:hover {
+        color: #FF0000;
+    }
+
+    #pwRec a {
+        display: inline;
+        float: left;
+        margin: -3% 0 0 5%;
+    }
+
+    #pwRec a:hover {
+        color: #FFFFFF;
+        text-decoration: underline;
+        text-shadow: none;
+    }
+
+
+    p {
+        padding: 0 20px;
+    }
+
+    .login-border {
+        margin: 0 auto;
+    }
+
+    .top-margin {
+        margin-top: 0px;
+    }
+
+    .control-group {
+        margin: 0 0 0 -150px;
+    }
+
+    label {
+        font-size: 12px;
+
+    }
+
+}
+
+@media (max-width: 767px) {
+    .form-horizontal {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .control-group {
+        text-align: center;
+        margin: 0 0 0 -175px;
+    }
+
+    .ld-border {
+        width: 44%;
+        margin-left: 1%;
+    }
+}
+
+@media (max-width: 620px) {
+    .ld-border {
+        width: 43%;
+    }
+}
+
+@media (max-width: 480px){
+    .control-group {
+        margin: 0;
+    }
+
+    #signUpHeader {
+        width: 85%;
+    }
+
+    label {
+        margin:0 auto;
+        width: 85%;
+    }
+    .ld-border {
+        width: 90%;
+    }
+
+}
+
+
+
+
+
+
+
+
 
