--- a/client/views/index.html
+++ b/client/views/index.html
@@ -6,14 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-    <link href='http://fonts.googleapis.com/css?family=Kite+One' rel='stylesheet' type='text/css'>
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <style type="text/css">
-  body {
-    padding-top: 60px;
-    padding-bottom: 40px;
-  }
-  </style>
+    <link href='http://fonts.googleapis.com/css?family=Cabin+Sketch:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+    <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/bootstrap-responsive.css" rel="stylesheet">
   <link href="css/app.css" rel="stylesheet">
 
@@ -26,9 +21,7 @@
     <div class="navbar-inner">
       <div class="container">
         <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+         <span class="icon-white icon-user"></span>
         </button>
         <a class="brand" href="#"><img src="../img/logo.png" alt="Ledita Logo" /></a>
           <div class="nav-collapse collapse">
@@ -41,6 +34,7 @@
               <input ng-model="username" class="span2" type="email" placeholder="Email" required="">
             <input ng-model="password" class="span2" type="password" placeholder="Password" required="">
             <button id="loginButton" type="submit" class="btn">Login</button>
+              <span id="pwRec"><a href="#">Forgot your password?</a></span>
           </form>
         </div><!--/.nav-collapse -->
       </div>
@@ -52,9 +46,9 @@
     <div class="navbar-inner">
       <div class="container">
         <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
         </button>
         <a class="brand" href="#"><img src="../img/logo.png" alt="Ledita Logo" /></a>
         <div class="nav-collapse collapse">
