--- a/client/views/index.html
+++ b/client/views/index.html
@@ -96,9 +96,9 @@
 <script src="/js/ld/HomeController.js"></script>
 <script src="/js/ld/HomeService.js"></script>
 
-<!-- Bootstrap: in theory could use angular-ui instead, but in practice, it has some problems, alerts for example are better handled in regular bootstrap -->
+<!-- Bootstrap -->
 <script src="/js/lib/jquery.js"></script>
 <script src="/js/lib/bootstrap.js"></script>
-<script src="/js/lib/ui-bootstrap-0.4.0.min.js"></script>
+<script src="/js/lib/ui-bootstrap-tpls-0.4.0.min.js"></script>
 </body>
 </html>
